--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
 						<blockquote>
 							"La Chouette Agence est une excellente agence web ! Les web designers ont réussi à capturer
 							l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos
-							ventes en ligne à Lyon."
+							ventes en ligne à Lyon." <br>
 						</blockquote>
-						<figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>
+						<span class="quote-author">Maxime Guibard, PDG de À vos fourchettes</span>
+						
 
 					</div>
 				</div>
