--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome/min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/jquery-2.2.4.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
@@ -137,7 +137,7 @@
 							ventes en ligne à Lyon." <br>
 						</blockquote>
 						<span class="quote-author">Maxime Guibard, PDG de À vos fourchettes</span>
-						
+
 
 					</div>
 				</div>
@@ -160,7 +160,8 @@
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
-							nous contacter. Nous travaillerons ensemble pour créer des bien structurés, esthétiques et bien référencés
+							nous contacter. Nous travaillerons ensemble pour créer des bien structurés, esthétiques et
+							bien référencés
 							par les moteurs de recherche. <br>
 						</p>
 					</div>
@@ -177,7 +178,8 @@
 						Nos Réalisations
 					</h2>
 					<p class="text-center">
-						Peu importe votre secteur d'activité, notre métier est de nous adapter à vos besoins. Que vous soyez
+						Peu importe votre secteur d'activité, notre métier est de nous adapter à vos besoins. Que vous
+						soyez
 						un particulier, une PME ou un grand groupe, nous vous accompagnerons de la conception à la
 						réalisation de votre projet web.
 						<br>
@@ -185,8 +187,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/journal-large.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/journal-thumbnail.jpg"
-								alt="Photographie de journaux"
+								src="img/journal-thumbnail.jpg" alt="Photographie de journaux"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
